--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallaxia Frame</title>
     <meta name="description" content="Upload your image and apply a custom frame overlay. Download your framed image instantly.">
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Gallaxia Frame" />
 
     
     
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Removed Lovable image reference; set a neutral placeholder or project image -->
+    <meta property="og:image" content="/public/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Removed Lovable twitter site and image -->
+    <meta name="twitter:site" content="@GallaxiaFrame" />
+    <meta name="twitter:image" content="/public/placeholder.svg" />
     <meta property="og:title" content="Gallaxia Frame">
   <meta name="twitter:title" content="Gallaxia Frame">
   <meta property="og:description" content="Upload your image and apply a custom frame overlay. Download your framed image instantly.">
