Add favicon pipeline: icons (PNG+ICO), manifest, header links; update paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
     <meta name="description" content="Upload your image and apply a custom frame overlay. Download your framed image instantly.">
     <meta name="author" content="Gallaxia Frame" />
 
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png" />
+    <link rel="icon" type="image/png" sizes="128x128" href="/favicon-128.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="msapplication-TileColor" content="#111111" />
+    <meta name="msapplication-TileImage" content="/mstile-150x150.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     
     
     <meta property="og:type" content="website" />
-    <!-- Removed Lovable image reference; set a neutral placeholder or project image -->
-    <meta property="og:image" content="./placeholder.svg" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <!-- Removed Lovable twitter site and image -->
     <meta name="twitter:site" content="@GallaxiaFrame" />
-    <meta name="twitter:image" content="./placeholder.svg" />
+    <meta name="twitter:image" content="/placeholder.svg" />
     <meta property="og:title" content="Gallaxia Frame">
   <meta name="twitter:title" content="Gallaxia Frame">
   <meta property="og:description" content="Upload your image and apply a custom frame overlay. Download your framed image instantly.">
